test-package-compiler/tests/snapshots/compiler_tests__self_send_explicit_class_reference_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [
        ClassDefinition {
            name: Identifier {
                name: "ExplicitRefOpenClass",
                span: Span {
                    start: 193,
                    end: 213,
                },
            },
            superclass: Some(
                Identifier {
                    name: "Object",
                    span: Span {
                        start: 176,
                        end: 182,
                    },
                },
            ),
            superclass_package: None,
            class_kind: Object,
            is_abstract: false,
            is_sealed: false,
            is_typed: false,
            is_internal: false,
            supervisor_kind: None,
            state: [],
            methods: [],
            class_methods: [
                MethodDefinition {
                    selector: Unary(
                        "foo",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                                leading_blank_line: false,
                                blank_line_after_comments: false,
                            },
                            expression: Literal(
                                Integer(
                                    1,
                                ),
                                Span {
                                    start: 253,
                                    end: 254,
                                },
                            ),
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: true,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 240,
                        end: 254,
                    },
                },
                MethodDefinition {
                    selector: Unary(
                        "bar",
                    ),
                    parameters: [],
                    body: [
                        ExpressionStatement {
                            comments: CommentAttachment {
                                leading: [],
                                trailing: None,
                                leading_blank_line: false,
                                blank_line_after_comments: false,
                            },
                            expression: MessageSend {
                                receiver: ClassReference {
                                    name: Identifier {
                                        name: "ExplicitRefOpenClass",
                                        span: Span {
                                            start: 271,
                                            end: 291,
                                        },
                                    },
                                    package: None,
                                    span: Span {
                                        start: 271,
                                        end: 291,
                                    },
                                },
                                selector: Unary(
                                    "foo",
                                ),
                                arguments: [],
                                is_cast: false,
                                span: Span {
                                    start: 271,
                                    end: 295,
                                },
                            },
                            preceding_blank_line: false,
                        },
                    ],
                    return_type: None,
                    is_sealed: false,
                    is_internal: false,
                    is_class_method: true,
                    kind: Primary,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 258,
                        end: 295,
                    },
                },
            ],
            class_variables: [
                StateDeclaration {
                    name: Identifier {
                        name: "hits",
                        span: Span {
                            start: 228,
                            end: 232,
                        },
                    },
                    type_annotation: None,
                    default_value: Some(
                        Literal(
                            Integer(
                                0,
                            ),
                            Span {
                                start: 235,
                                end: 236,
                            },
                        ),
                    ),
                    declared_keyword: State,
                    slot_kind: Eager,
                    expect: None,
                    comments: CommentAttachment {
                        leading: [],
                        trailing: None,
                        leading_blank_line: false,
                        blank_line_after_comments: false,
                    },
                    doc_comment: None,
                    span: Span {
                        start: 216,
                        end: 236,
                    },
                },
            ],
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 176,
                            end: 182,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 176,
                            end: 182,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "BT-3666: explicit own-class reference in an open class is a static call that still rebinds ClassVars.",
                        span: Span {
                            start: 176,
                            end: 182,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: true,
            },
            doc_comment: None,
            backing_module: None,
            handle_scope: None,
            shape_version: None,
            type_params: [],
            superclass_type_args: [],
            uses: [],
            span: Span {
                start: 176,
                end: 295,
            },
        },
    ],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [],
    span: Span {
        start: 176,
        end: 295,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}
