test-package-compiler/tests/snapshots/compiler_tests__self_send_open_actor_lexer.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Token { kind: Identifier("Actor"), span: Span { start: 174, end: 179 }, leading_trivia: [LineComment("// Copyright 2026 James Casey"), Whitespace("\n"), LineComment("// SPDX-License-Identifier: Apache-2.0"), Whitespace("\n\n"), LineComment("// BT-3666: open-class actor self-send resolves the callee module from the instance's '__class_mod__'."), Whitespace("\n\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("subclass:"), span: Span { start: 180, end: 189 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("OpenSelfSendActor"), span: Span { start: 190, end: 207 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Keyword("state:"), span: Span { start: 210, end: 216 }, leading_trivia: [Whitespace("\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("count"), span: Span { start: 217, end: 222 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("="), span: Span { start: 223, end: 224 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("0"), span: Span { start: 225, end: 226 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("foo"), span: Span { start: 230, end: 233 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 234, end: 236 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("1"), span: Span { start: 237, end: 238 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("bar"), span: Span { start: 242, end: 245 }, leading_trivia: [Whitespace("\n\n  ")], trailing_trivia: [Whitespace(" ")] }
Token { kind: FatArrow, span: Span { start: 246, end: 248 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("self"), span: Span { start: 249, end: 253 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("foo"), span: Span { start: 254, end: 257 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Eof, span: Span { start: 258, end: 258 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [] }
